<resources>
    <string name="app_name">App Prueba Tecnica Nexos</string>
    <string name="text_button_ok">Aceptar</string>
    <string name="client_name">CredibanCo</string>
    <string name="text_option1_menu">Autorizar Transacciones</string>
    <string name="text_option2_menu">Buscar Transacciones</string>
    <string name="text_option3_menu">Transacciones Aprobadas</string>
    <string name="title_details_transaction">Detalles transacción</string>
    <string name="text_number_receipt_details_activity">Número de Recibo</string>
    <string name="text_id_transaction_details_activity">Id Transacción</string>
    <string name="text_id_device_details_activity">Id Dispositivo</string>
    <string name="text_value_transaction_details_activity">Valor Transacción</string>
    <string name="text_number_card_details_activity">Número de Tarjeta</string>
    <string name="text_button_annulation_details_activity">Anular Transacción</string>
    <string name="message_not_found_transactions_approved">No se encontraron transacciones aprobadas.</string>
    <string name="title_authorization_transactions_fragment">Autorización de transacciones</string>
    <string name="hint_id_transaction_authorization_transactions_fragment">Id Transacción</string>
    <string name="hint_commerce_code_authorization_transactions_fragment">Código de comercio</string>
    <string name="hint_id_device_authorization_transactions_fragment">Id Dispositivo</string>
    <string name="hint_amount_authorization_transactions_fragment">Valor a pagar</string>
    <string name="hint_number_card_authorization_transactions_fragment">Número de Tarjeta</string>
    <string name="text_button_authorize_authorization_transactions_fragment">Autorizar</string>
    <string name="text_state_invalidate_transaction">Anulada</string>
    <string name="text_state_approved_transaction">Aprobada</string>
    <string name="title_number_receipt_item_transactions_approved">Número de recibo generado</string>
    <string name="title_id_transaction_item_transactions_approved">Id Transacción</string>
    <string name="title_state_item_transactions_approved">Estado</string>
    <string name="title_value_transaction_item_transactions_approved">Valor</string>
    <string name="title_number_card_item_transactions_approved">Número de Tarjeta</string>
    <string name="title_search_transaction_fragment">Búsqueda de transacciones</string>
    <string name="hint_field_number_receipt_search_transaction_fragment">Número de recibo</string>
    <string name="text_button_search_transaction_fragment">buscar</string>
    <string name="message_annulation_transaction_ok">Transacción anulada con éxito.</string>
    <string name="message_annulation_transaction_fail">No se pudo anular esta transacción, ¡inténtalo más tarde!</string>
    <string name="message_approved_transaction_ok">¡La transacción fue aprobada con éxito!</string>
    <string name="message_approved_transaction_fail">¡No ha sido posible realizar la transacción, inténtalo más tarde!</string>
    <string name="error_id_transaction">¡Id de transacción inválida!</string>
    <string name="error_commerce_code">¡Código de comercio inválido!</string>
    <string name="error_id_device">¡Id del dispositivo inválido!</string>
    <string name="error_amount">¡Monto a pagar, inválido!</string>
    <string name="error_number_card">¡Número de tarjeta inválido!</string>
    <string name="error_number_receipt">¡Número de recibo inválido!</string>
    <string name="message_not_found_transaction">No se ha podido encontrar alguna transacción con el número de recibo que digitaste.</string>
</resources>