<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.AuthorizationTransactionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/title_authorization_transactions_fragment"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColorHint="@color/black"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldIdDeviceTransaction"
                    android:textColor="@color/black"
                    android:hint="@string/hint_id_transaction_authorization_transactions_fragment"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColorHint="@color/black"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldCommerceCode"
                    android:background="@color/white"
                    android:hint="@string/hint_commerce_code_authorization_transactions_fragment"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldTerminalCode"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:hint="@string/hint_id_device_authorization_transactions_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldAmount"
                    android:inputType="number"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:hint="@string/hint_amount_authorization_transactions_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldCard"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:hint="@string/hint_number_card_authorization_transactions_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAuthorization"
                android:background="@drawable/background_button"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:padding="16dp"
                android:text="@string/text_button_authorize_authorization_transactions_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/backgroundProgress"
        android:clickable="true"
        android:alpha="0.5"
        android:visibility="gone"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>