<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.SearchTransactionsFragment">

    <LinearLayout
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/title_search_transaction_fragment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldNumberReceiptTransaction"
                android:hint="@string/hint_field_number_receipt_search_transaction_fragment"
                android:background="@color/white"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSearchTransaction"
            android:text="@string/text_button_search_transaction_fragment"
            android:background="@drawable/background_button"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:id="@+id/backgroundProgress"
        android:alpha="0.5"
        android:visibility="gone"
        android:background="@color/black"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>