<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/titleReceiptIdTransaction"
        android:layout_marginTop="32dp"
        android:text="@string/title_number_receipt_item_transactions_approved"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/receiptIdTransaction"
        tool:text="4386597846578943"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleReceiptIdTransaction"/>

    <TextView
        android:id="@+id/titleIdTransaction"
        android:layout_marginTop="16dp"
        android:text="@string/title_id_transaction_item_transactions_approved"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/receiptIdTransaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/titleStateTransaction"/>

    <TextView
        android:id="@+id/idTransaction"
        tool:text="4386597846578943"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleIdTransaction"
        app:layout_constraintEnd_toEndOf="@id/titleIdTransaction"
        app:layout_constraintTop_toBottomOf="@id/titleIdTransaction"/>

    <TextView
        android:id="@+id/titleStateTransaction"
        android:layout_marginTop="16dp"
        android:text="@string/title_state_item_transactions_approved"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/receiptIdTransaction"
        app:layout_constraintStart_toEndOf="@id/titleIdTransaction"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/stateTransaction"
        tool:text="Anulada"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleStateTransaction"
        app:layout_constraintEnd_toEndOf="@id/titleStateTransaction"
        app:layout_constraintTop_toBottomOf="@id/titleStateTransaction"/>

    <TextView
        android:id="@+id/titleValueTransaction"
        android:text="@string/title_value_transaction_item_transactions_approved"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/titleNumberCardTransaction"
        app:layout_constraintTop_toBottomOf="@id/idTransaction"/>

    <TextView
        android:id="@+id/valueTransaction"
        tool:text="$ 150.000"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleValueTransaction"
        app:layout_constraintTop_toBottomOf="@id/titleValueTransaction"
        app:layout_constraintEnd_toEndOf="@id/titleValueTransaction"/>

    <TextView
        android:id="@+id/titleNumberCardTransaction"
        android:text="@string/title_number_card_item_transactions_approved"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/titleValueTransaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idTransaction"/>

    <TextView
        android:id="@+id/numberCardTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/black"
        tool:text="23827473984"
        app:layout_constraintStart_toStartOf="@id/titleNumberCardTransaction"
        app:layout_constraintEnd_toEndOf="@id/titleNumberCardTransaction"
        app:layout_constraintTop_toBottomOf="@id/titleNumberCardTransaction"/>

    <View
        android:layout_marginTop="32dp"
        android:background="@color/red"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/numberCardTransaction"/>

</androidx.constraintlayout.widget.ConstraintLayout>